--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <main>
-  <header class="brand-name">
-    <img class="brand-logo" src="/assets/home.svg" alt="logo" aria-hidden="true" />
-  </header>
-  <section>
-    <app-home></app-home>
+  <a [routerLink]="['/']">
+    <header class="brand-name">
+      <img class="brand-logo" src="/assets/home.svg" alt="logo" aria-hidden="true" />
+    </header>
+  </a>
+  <section class="content">
+    <router-outlet />
   </section>
 </main>
-<router-outlet />
