--- a/src/app/housing-location/housing-location.component.html
+++ b/src/app/housing-location/housing-location.component.html
@@ -1,6 +1,12 @@
-<section class="listing">
-  <img class="listing-photo" [src]="housingLocation.photo" alt="Exterior photo of {{ housingLocation.name }}" />
-  <h2 class="listing-heading">{{ housingLocation.name }}</h2>
-  <p class="listing-location">{{ housingLocation.city }}, {{ housingLocation.state }}</p>
-  <a [routerLink]="['/details', housingLocation.id]">Learn More</a>
+<section>
+  <img
+    class="aspect-3/2 object-cover"
+    [src]="housingLocation.photo"
+    alt="Exterior photo of {{ housingLocation.name }}"
+  />
+  <h2 class="text-xl font-bold line-height-tight my-2">{{ housingLocation.name }}</h2>
+  <p class="c-gray-500">{{ housingLocation.city }}, {{ housingLocation.state }}</p>
+  <p class="text-right">
+    <a class="border-b-dashed border-b-1 border-gray-300 c-gray-500" [routerLink]="['/details', housingLocation.id]">Learn More</a>
+  </p>
 </section>
