ADD app form & UPDATE styles

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -17,4 +17,24 @@
       <li>Does this location have laundry: {{ housingLocation?.laundry }}</li>
     </ul>
   </section>
+  <section class="p-5">
+    <h2 class="text-xl font-bold mb-5">Apply now to live here</h2>
+    <form class="flex flex-col gap-5" [formGroup]="applyForm" (submit)="submitApplication()">
+      <div>
+        <label class="block" for="first-name">First Name</label>
+        <input class="border-1 rounded p-2" id="first-name" type="text" formArrayName="firstName" />
+      </div>
+      <div>
+        <label class="block" for="last-name">Last Name</label>
+        <input class="border-1 rounded p-2" id="last-name" type="text" formArrayName="lastName" />
+      </div>
+      <div>
+        <label class="block" for="email">Email</label>
+        <input class="border-1 rounded p-2" id="email" type="email" formArrayName="email" />
+      </div>
+      <div>
+        <button class="c-white inline-block bg-blue-500 py-2 px-5 rounded cursor-pointer" type="submit">Apply now</button>
+      </div>
+    </form>
+  </section>
 </article>
