--- a/src/app/housing-location/housing-location.component.html
+++ b/src/app/housing-location/housing-location.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="rounded overflow-hidden bg-gray-100 p-2 h-full hover:shadow-xl">
   <img
     class="aspect-3/2 object-cover"
     [src]="housingLocation.photo"
