--- a/src/styles.css
+++ b/src/styles.css
@@ -1,31 +1,61 @@
 /* layer: theme */
-:root { --font-sans: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; --font-mono: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; --defaults-font-family: var(--font-sans); --defaults-font-feature-settings: var(--font-sans--font-feature-settings); --defaults-font-variation-settings: var(--font-sans--font-variation-settings); --defaults-mono-font-family: var(--font-mono); --defaults-mono-font-feature-settings: var(--font-mono--font-feature-settings); --defaults-mono-font-variation-settings: var(--font-mono--font-variation-settings); --spacing: 0.25rem; --container-lg: 32rem; --container-xl: 36rem; --container-2xl: 42rem; --container-4xl: 56rem; --container-7xl: 80rem; --container-6xl: 72rem; --container-5xl: 64rem; --colors-red-50: oklch(0.971 0.013 17.38); --colors-gray-50: oklch(0.985 0.002 247.839); --colors-gray-200: oklch(0.928 0.006 264.531); --colors-red-400: oklch(0.704 0.191 22.216); --colors-red-100: oklch(0.936 0.032 17.717); --text-xl-font-size: 1.25rem; --text-xl-line-height: 1.75rem; --font-weight-bold: 700; --leading-normal: 1.5; --leading-tight: 1.25; --colors-gray-400: oklch(0.707 0.022 261.325); --colors-gray-500: oklch(0.551 0.027 264.364); --colors-black: #000; --colors-gray-300: oklch(0.872 0.01 258.338); }
+:root { --font-sans: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; --font-mono: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; --defaults-font-family: var(--font-sans); --defaults-font-feature-settings: var(--font-sans--font-feature-settings); --defaults-font-variation-settings: var(--font-sans--font-variation-settings); --defaults-mono-font-family: var(--font-mono); --defaults-mono-font-feature-settings: var(--font-mono--font-feature-settings); --defaults-mono-font-variation-settings: var(--font-mono--font-variation-settings); --spacing: 0.25rem; --container-lg: 32rem; --container-xl: 36rem; --container-2xl: 42rem; --container-4xl: 56rem; --container-7xl: 80rem; --container-6xl: 72rem; --container-5xl: 64rem; --colors-red-50: oklch(0.971 0.013 17.38); --colors-gray-50: oklch(0.985 0.002 247.839); --colors-gray-200: oklch(0.928 0.006 264.531); --colors-red-400: oklch(0.704 0.191 22.216); --colors-red-100: oklch(0.936 0.032 17.717); --text-xl-font-size: 1.25rem; --text-xl-line-height: 1.75rem; --font-weight-bold: 700; --leading-normal: 1.5; --leading-tight: 1.25; --colors-gray-400: oklch(0.707 0.022 261.325); --colors-gray-500: oklch(0.551 0.027 264.364); --colors-black: #000; --colors-gray-300: oklch(0.872 0.01 258.338); --colors-blue-100: oklch(0.932 0.032 255.585); --colors-gray-100: oklch(0.967 0.003 264.542); --colors-blue-300: oklch(0.809 0.105 251.813); --colors-blue-400: oklch(0.707 0.165 254.624); --colors-white: #fff; --colors-blue-500: oklch(0.623 0.214 259.815); }
 /* layer: preflights */
  *, ::after, ::before, ::backdrop, ::file-selector-button { box-sizing: border-box;  margin: 0;  padding: 0;  border: 0 solid;  }  html, :host { line-height: 1.5;  -webkit-text-size-adjust: 100%;  tab-size: 4;  font-family: var( --defaults-font-family, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' );  font-feature-settings: var(--defaults-font-feature-settings, normal);  font-variation-settings: var(--defaults-font-variation-settings, normal);  -webkit-tap-highlight-color: transparent;  }  body { line-height: inherit; }  hr { height: 0;  color: inherit;  border-top-width: 1px;  }  abbr:where([title]) { -webkit-text-decoration: underline dotted; text-decoration: underline dotted; }  h1, h2, h3, h4, h5, h6 { font-size: inherit; font-weight: inherit; }  a { color: inherit; -webkit-text-decoration: inherit; text-decoration: inherit; }  b, strong { font-weight: bolder; }  code, kbd, samp, pre { font-family: var( --defaults-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace );  font-feature-settings: var(--defaults-mono-font-feature-settings, normal);  font-variation-settings: var(--defaults-mono-font-variation-settings, normal);  font-size: 1em;  }  small { font-size: 80%; }  sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; } sub { bottom: -0.25em; } sup { top: -0.5em; }  table { text-indent: 0;  border-color: inherit;  border-collapse: collapse;  }  :-moz-focusring { outline: auto; }  progress { vertical-align: baseline; }  summary { display: list-item; }  ol, ul, menu { list-style: none; }  img, svg, video, canvas, audio, iframe, embed, object { display: block;  vertical-align: middle;  }  img, video { max-width: 100%; height: auto; }  button, input, select, optgroup, textarea, ::file-selector-button { font: inherit;  font-feature-settings: inherit;  font-variation-settings: inherit;  letter-spacing: inherit;  color: inherit;  border-radius: 0;  background-color: transparent;  opacity: 1;  }  :where(select:is([multiple], [size])) optgroup { font-weight: bolder; }  :where(select:is([multiple], [size])) optgroup option { padding-inline-start: 20px; }  ::file-selector-button { margin-inline-end: 4px; }  ::placeholder { opacity: 1;  color: color-mix(in oklab, currentColor 50%, transparent);  }  textarea { resize: vertical; }  ::-webkit-search-decoration { -webkit-appearance: none; }  ::-webkit-date-and-time-value { min-height: 1lh;  text-align: inherit;  }  ::-webkit-datetime-edit { display: inline-flex; }  ::-webkit-datetime-edit-fields-wrapper { padding: 0; } ::-webkit-datetime-edit, ::-webkit-datetime-edit-year-field, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute-field, ::-webkit-datetime-edit-second-field, ::-webkit-datetime-edit-millisecond-field, ::-webkit-datetime-edit-meridiem-field { padding-block: 0; }  :-moz-ui-invalid { box-shadow: none; }  button, input:where([type='button'], [type='reset'], [type='submit']), ::file-selector-button { appearance: button; }  ::-webkit-inner-spin-button, ::-webkit-outer-spin-button { height: auto; }  [hidden]:where(:not([hidden='until-found'])) { display: none !important; }
 /* layer: default */
 .text-xl{font-size:var(--text-xl-font-size);line-height:var(--un-leading, var(--text-xl-line-height));}
 @property --un-text-opacity {syntax: "<percentage>";inherits: false;initial-value: 100%;}
 .c-gray-500{color:color-mix(in oklch, var(--colors-gray-500) var(--un-text-opacity), transparent) /* oklch(0.551 0.027 264.364) */;}
+.c-white{color:color-mix(in oklch, var(--colors-white) var(--un-text-opacity), transparent) /* #fff */;}
 .font-bold{--un-font-weight:var(--font-weight-bold);font-weight:var(--font-weight-bold);}
 .line-height-tight{--un-leading:var(--leading-tight);line-height:var(--leading-tight);}
 @property --un-leading {syntax: "*";inherits: false;}
 .mx-auto{margin-inline:auto;}
 .my-2{margin-block:calc(var(--spacing) * 2);}
 .mb-4{margin-bottom:calc(var(--spacing) * 4);}
+.mb-5{margin-bottom:calc(var(--spacing) * 5);}
+.p-2{padding:calc(var(--spacing) * 2);}
 .p-5{padding:calc(var(--spacing) * 5);}
+.px-5{padding-inline:calc(var(--spacing) * 5);}
+.py-2{padding-block:calc(var(--spacing) * 2);}
 .pb-2{padding-bottom:calc(var(--spacing) * 2);}
 .pb-5{padding-bottom:calc(var(--spacing) * 5);}
 .text-right{text-align:right;}
+.border-1{border-width:1px;}
 .border-b-1{border-bottom-width:1px;}
 @property --un-border-opacity {syntax: "<percentage>";inherits: false;initial-value: 100%;}
 .border-gray-200{border-color:color-mix(in oklch, var(--colors-gray-200) var(--un-border-opacity), transparent);}
 .border-gray-300{border-color:color-mix(in oklch, var(--colors-gray-300) var(--un-border-opacity), transparent);}
+.rounded{border-radius:0.25rem;}
 .border-b-dashed{--un-border-style:dashed;border-bottom-style:dashed;}
+@property --un-bg-opacity {syntax: "<percentage>";inherits: false;initial-value: 100%;}
+.bg-blue-500{background-color:color-mix(in oklch, var(--colors-blue-500) var(--un-bg-opacity), transparent) /* oklch(0.623 0.214 259.815) */;}
+.bg-gray-100{background-color:color-mix(in oklch, var(--colors-gray-100) var(--un-bg-opacity), transparent) /* oklch(0.967 0.003 264.542) */;}
+.flex{display:flex;}
+.flex-col{flex-direction:column;}
 .gap-5{gap:calc(var(--spacing) * 5);}
 .grid{display:grid;}
+.h-full{height:100%;}
 .max-w-full{max-width:100%;}
 .w-4\/5{width:80%;}
 .aspect-3\/2{aspect-ratio:3/2;}
+.block{display:block;}
+.inline-block{display:inline-block;}
+.cursor-pointer{cursor:pointer;}
+@property --un-shadow {syntax: "*";inherits: false;initial-value: 0 0 #0000;}
+@property --un-shadow-color {syntax: "*";inherits: false;}
+@property --un-inset-shadow {syntax: "*";inherits: false;initial-value: 0 0 #0000;}
+@property --un-inset-shadow-color {syntax: "*";inherits: false;}
+@property --un-ring-color {syntax: "*";inherits: false;}
+@property --un-ring-shadow {syntax: "*";inherits: false;initial-value: 0 0 #0000;}
+@property --un-inset-ring-color {syntax: "*";inherits: false;}
+@property --un-inset-ring-shadow {syntax: "*";inherits: false;initial-value: 0 0 #0000;}
+@property --un-ring-inset {syntax: "*";inherits: false;}
+@property --un-ring-offset-width {syntax: ""<length>"";inherits: false;initial-value: 0px;}
+@property --un-ring-offset-color {syntax: "*";inherits: false;}
+@property --un-ring-offset-shadow {syntax: "*";inherits: false;initial-value: 0 0 #0000;}
+.hover\:shadow-xl:hover{--un-shadow:0 20px 25px -5px var(--un-shadow-color, rgb(0 0 0 / 0.1)),0 8px 10px -6px var(--un-shadow-color, rgb(0 0 0 / 0.1));box-shadow:var(--un-inset-shadow), var(--un-inset-ring-shadow), var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}
+.overflow-hidden{overflow:hidden;}
 .object-cover{object-fit:cover;}
 @media (min-width: 40rem){
 .sm\:grid-cols-2{grid-template-columns:repeat(2,minmax(0,1fr));}
